- added output file format dialog - added names to privacy and quality select elements - fixed values of all the os options - changed font size of upload content list and changed overflow of center layout div to auto
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@10324 48a7a3f7-ad46-0410-b969-29950918272e

--- a/mod_creator/website/styles/creator.css
+++ b/mod_creator/website/styles/creator.css
@@ -252,7 +252,7 @@ div.ui-layout-north
 .ui-layout-center
 {
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .ui-layout-west, .ui-layout-south, .west-center, .west-south
@@ -356,9 +356,13 @@ padding: 3px 2px;
 
 #uploadedfiles button
 {
-    font-size: 57%;
+    font-size: 55%;
     margin-right: 3px;
 }
 
+#uploadcontent
+{
+    font-size: 0.75em;
+}
 
 
